--- a/views/shop.pug
+++ b/views/shop.pug
@@ -5,9 +5,9 @@ block styles
 
 block content
     main
-        if prods.length > 0
+        if products.length > 0
             .grid
-                each product in prods
+                each product in products
                     article.card.product-item
                         header.card__header
                             h1.product__title #{product.title}
