--- a/views/shop/index.pug
+++ b/views/shop/index.pug
@@ -17,6 +17,7 @@ block content
               h2.product__price $#{ product.price }
               p.product__description #{ product.description }
             .card__actions
+              a.btn(href=`/products/${product.id}`) Details
               button.btn Add to Cart
     else
       h1 No Products
