--- a/views/admin/products.pug
+++ b/views/admin/products.pug
@@ -17,8 +17,9 @@ block content
               h2.product__price $#{ product.price }
               p.product__description #{ product.description }
             .card__actions
-              a.btn(href="/admin/edit-product") Edit
+              a.btn(href="/admin/edit-product/" + product.id.toString() + "?edit=true") Edit
               form(action="/admin/delete-product", method="POST")
+                input(type="hidden", name="productId", value=product.id)
                 button.btn(type="submit") Delete
     else
       h1 No Products
