--- a/views/shop/product-details.pug
+++ b/views/shop/product-details.pug
@@ -7,7 +7,7 @@ block content
   main.centered
     h1 #{ product.title }
     hr
-    div
+    .image
       img(src=product.imageUrl, alt=product.title)
     h2 $#{ product.price }
     p #{ product.description }
