Add cart functionality to app and models

--- a/views/shop/cart.pug
+++ b/views/shop/cart.pug
@@ -2,13 +2,13 @@ extends ../layouts/main-layout.pug
 
 block content
   main
-    if cartProducts.length > 0
+    if products.length > 0
       h1 Cart
       ul
-        each cartProduct in cartProducts
-          li #{ cartProduct.productData.title } (#{ cartProduct.quantity }) - $#{ cartProduct.productData.price * cartProduct.quantity }
+        each product in products
+          li #{ product.title } (#{ product.cartItem.quantity }) - $#{ product.price * product.cartItem.quantity }
             form(action="/cart-delete-product", method="post")
-              input(type="hidden", name="productId", value=cartProduct.productData.id)
+              input(type="hidden", name="productId", value=product.id)
               button.btn(type="submit") Delete
       p Total: $#{ totalPrice }
     else
