--- a/views/shop/cart.pug
+++ b/views/shop/cart.pug
@@ -1,15 +1,21 @@
 extends ../layouts/main-layout.pug
 
+block styles
+  link(rel="stylesheet", href="/css/cart.css")
+
 block content
   main
     if products.length > 0
-      h1 Cart
-      ul
+      h1.centered Cart
+      ul.cart__item-list
         each product in products
-          li #{ product.title } (#{ product.cartItem.quantity }) - $#{ product.price * product.cartItem.quantity }
+          li.cart__item #{ product.title } (#{ product.cartItem.quantity }) - $#{ product.price * product.cartItem.quantity }
             form(action="/cart-delete-product", method="post")
               input(type="hidden", name="productId", value=product.id)
-              button.btn(type="submit") Delete
-      p Total: $#{ totalPrice }
+              button.btn.danger(type="submit") Delete
+      p.centered Total: $#{ totalPrice }
+      .centered
+        form(action="/create-order", method="post")
+          button.btn(type="submit") Order Now
     else
       h1 No Products In Cart!
