--- a/views/shop/product-details.pug
+++ b/views/shop/product-details.pug
@@ -8,7 +8,7 @@ block content
     h1 #{ product.title }
     hr
     .image
-      img(src=product.imageUrl, alt=product.title)
+      img(src="/#{product.imageUrl}", alt=product.title)
     h2 $#{ product.price }
     p #{ product.description }
     include ../layouts/add-to-cart-form.pug
