--- a/views/shop/cart.pug
+++ b/views/shop/cart.pug
@@ -11,7 +11,7 @@ block content
         each product in products
           li.cart__item #{ product.title } (#{ product.cartItem.quantity }) - $#{ product.price * product.cartItem.quantity }
             form(action="/cart-delete-product", method="post")
-              input(type="hidden", name="productId", value=product.id)
+              input(type="hidden", name="productId", value=product._id)
               button.btn.danger(type="submit") Delete
       p.centered Total: $#{ totalPrice }
       .centered
