--- a/views/shop/orders.pug
+++ b/views/shop/orders.pug
@@ -6,7 +6,7 @@ block content
       ul
         each order in orders
           li
-            h1 # #{ order.id }
+            h1 # #{ order._id }
             ul
               each product in order.products
                 li #{ product.title } - $#{ product.price } x #{ product.orderItem.quantity }
