--- a/views/admin/edit-product.pug
+++ b/views/admin/edit-product.pug
@@ -20,5 +20,5 @@ block content
         label(for="description") Description
         textarea#description(name="description", rows="5") #{ editing ? product.description : "" }
       if editing
-        input(type="hidden", name="id", value=product._id)
+        input(type="hidden", name="productId", value=product._id)
       button.btn(type="submit") #{ editing ? 'Update' : 'Add' } Product
