--- a/views/shop/orders.pug
+++ b/views/shop/orders.pug
@@ -8,7 +8,7 @@ block content
           li
             h1 # #{ order._id }
             ul
-              each product in order.products
-                li #{ product.title } - $#{ product.price } x #{ product.orderItem.quantity }
+              each product in order.items
+                li #{ product.title } - $#{ product.price } x #{ product.quantity }
     else
       p No orders yet
