--- a/views/layouts/navigation.pug
+++ b/views/layouts/navigation.pug
@@ -9,7 +9,10 @@ header.main-header
         a(href="/cart", class=path === "/cart" ? "active" : "") Cart
       li.main-header__item
         a(href="/orders", class=path === "/orders" ? "active" : "") Orders
+      //- li.main-header__item
+      //-   a(href="/admin/add-product", class=path === "/admin/add-product" ? "active" : "") Add Product
+      //- li.main-header__item
+      //-   a(href="/admin/products", class=path === "/admin/products" ? "active" : "") Admin Products
+    ul.main-header__item-list
       li.main-header__item
-        a(href="/admin/add-product", class=path === "/admin/add-product" ? "active" : "") Add Product
-      li.main-header__item
-        a(href="/admin/products", class=path === "/admin/products" ? "active" : "") Admin Products
+        a(href="/login", class=path === "/login" ? "active" : "") Login
