--- a/views/layouts/navigation.pug
+++ b/views/layouts/navigation.pug
@@ -9,10 +9,11 @@ header.main-header
         a(href="/cart", class=path === "/cart" ? "active" : "") Cart
       li.main-header__item
         a(href="/orders", class=path === "/orders" ? "active" : "") Orders
-      //- li.main-header__item
-      //-   a(href="/admin/add-product", class=path === "/admin/add-product" ? "active" : "") Add Product
-      //- li.main-header__item
-      //-   a(href="/admin/products", class=path === "/admin/products" ? "active" : "") Admin Products
+      if (isAuthenticated)
+        li.main-header__item
+          a(href="/admin/add-product", class=path === "/admin/add-product" ? "active" : "") Add Product
+        li.main-header__item
+          a(href="/admin/products", class=path === "/admin/products" ? "active" : "") Admin Products
     ul.main-header__item-list
       li.main-header__item
         a(href="/login", class=path === "/login" ? "active" : "") Login
