--- a/public/css/main.css
+++ b/public/css/main.css
@@ -65,9 +65,20 @@ form {
   color: white;
 }
 
+.main-header__item button {
+  background-color: transparent;
+  border: none;
+  color: white;
+  cursor: pointer;
+  font-size: 16px;
+}
+
 .main-header__item a:hover,
 .main-header__item a:active,
-.main-header__item a.active {
+.main-header__item a.active,
+.main-header__item button:hover,
+.main-header__item button:active,
+.main-header__item button.active {
   color: #ffeb3b;
 }
 
