--- a/views/layouts/navigation.pug
+++ b/views/layouts/navigation.pug
@@ -17,3 +17,6 @@ header.main-header
     ul.main-header__item-list
       li.main-header__item
         a(href="/login", class=path === "/login" ? "active" : "") Login
+      li.main-header__item
+        form(action="/logout", method="post")
+          button(type="submit") Logout
