Refactor navigation and product views to conditionally show add-to-cart and logout buttons based on user authentication status

--- a/views/shop/index.pug
+++ b/views/shop/index.pug
@@ -18,6 +18,7 @@ block content
               p.product__description #{ product.description }
             .card__actions
               include ../layouts/product-details-button.pug
-              include ../layouts/add-to-cart-form.pug
+              if (isAuthenticated)
+                include ../layouts/add-to-cart-form.pug
     else
       h1 No Products
