--- a/views/shop/product-details.pug
+++ b/views/shop/product-details.pug
@@ -11,4 +11,5 @@ block content
       img(src="/#{product.imageUrl}", alt=product.title)
     h2 $#{ product.price }
     p #{ product.description }
-    include ../layouts/add-to-cart-form.pug
+    if (isAuthenticated)
+      include ../layouts/add-to-cart-form.pug
