--- a/views/layouts/navigation.pug
+++ b/views/layouts/navigation.pug
@@ -1,3 +1,4 @@
+.backdrop
 header.main-header
   nav.main-header__nav
     ul.main-header__item-list
@@ -22,3 +23,29 @@ header.main-header
       else
         li.main-header__item
           a(href="/login", class=path === "/login" ? "active" : "") Login
+        li.main-header__item
+          a(href="/signup", class=path === "/signup" ? "active" : "") Signup
+
+nav.mobile-nav
+  ul.mobile.nav__item-list
+    li.mobile-nav__item
+      a(href="/", class=path === "/" ? "active" : "") Shop
+    li.mobile-nav__item
+      a(href="/products", class=path === "/products" ? "active" : "") Products
+    if (isAuthenticated)
+      li.mobile-nav__item
+        a(href="/cart", class=path === "/cart" ? "active" : "") Cart
+      li.mobile-nav__item
+        a(href="/orders", class=path === "/orders" ? "active" : "") Orders
+      li.mobile-nav__item
+        a(href="/admin/add-product", class=path === "/admin/add-product" ? "active" : "") Add Product
+      li.mobile-nav__item
+        a(href="/admin/products", class=path === "/admin/products" ? "active" : "") Admin Products
+      li.mobile-nav__item
+        form(action="/logout", method="post")
+          button(type="submit") Logout
+    else
+      li.mobile-nav__item
+        a(href="/login", class=path === "/login" ? "active" : "") Login
+      li.mobile-nav__item
+        a(href="/signup", class=path === "/signup" ? "active" : "") Signup
