Add authentication middleware to protect routes in admin.js and shop.js, mobile menu bugfix

--- a/views/layouts/navigation.pug
+++ b/views/layouts/navigation.pug
@@ -1,5 +1,6 @@
 .backdrop
 header.main-header
+  button#side-menu-toggle Menu
   nav.main-header__nav
     ul.main-header__item-list
       li.main-header__item
