--- a/public/css/main.css
+++ b/public/css/main.css
@@ -232,6 +232,20 @@ form {
   color: white;
 }
 
+.user-message {
+  margin: auto;
+  border: 1px solid blue;
+  background: aquamarine;
+  padding: 1rem;
+  border-radius: 3px;
+  margin-bottom: 20px;
+}
+
+.user-message--error {
+  border-color: red;
+  background-color: lightcoral;
+}
+
 @media (min-width: 768px) {
   .main-header__nav {
     display: flex;
