--- a/views/auth/login.pug
+++ b/views/auth/login.pug
@@ -14,4 +14,6 @@ block content
         label(for="password") Password
         input#password(type="password", name="password")
       input(type="hidden", name="_csrf", value=csrfToken)
+      if (errorMessage.length > 0)
+        .user-message.user-message--error #{ errorMessage }
       button.btn(type="submit") Login
