--- a/views/auth/signup.pug
+++ b/views/auth/signup.pug
@@ -17,4 +17,6 @@ block content
         label(for="confirmPassword") Confirm Password
         input#password(type="password", name="confirmPassword")
       input(type="hidden", name="_csrf", value=csrfToken)
+      if (errorMessage.length > 0)
+        .user-message.user-message--error #{ errorMessage }
       button.btn(type="submit") Signup
