--- a/views/auth/reset.pug
+++ b/views/auth/reset.pug
@@ -6,16 +6,11 @@ block styles
 
 block content
   main
-    form.login-form(action="/login", method="POST")
+    form.login-form(action="/reset", method="POST")
       .form-control
         label(for="email") E-mail
         input#email(type="email", name="email")
-      .form-control
-        label(for="password") Password
-        input#password(type="password", name="password")
       input(type="hidden", name="_csrf", value=csrfToken)
       if (errorMessage.length > 0)
         .user-message.user-message--error #{ errorMessage }
-      button.btn(type="submit") Login
-    .centered
-      a(href="/reset") Forgot Password?
+      button.btn(type="submit") Reset Password
