Refactor postLogin route to include validation for email and password in auth.js controller and routes

--- a/views/auth/signup.pug
+++ b/views/auth/signup.pug
@@ -6,7 +6,7 @@ block styles
 
 block content
   main
-    form.login-form(action="/signup", method="POST", novalidate)
+    form.login-form(action="/signup", method="POST")
       .form-control
         label(for="email") E-mail
         input#email(type="email", name="email")
