--- a/public/css/forms.css
+++ b/public/css/forms.css
@@ -21,3 +21,8 @@
 .form-control textarea:focus {
   outline-color: #00695c;
 }
+
+.form-control--invalid input,
+.form-control--invalid label {
+  border-color: red;
+}
