--- a/views/auth/new-password.pug
+++ b/views/auth/new-password.pug
@@ -7,10 +7,10 @@ block styles
 block content
   main
     form.login-form(action="/save-new-password", method="POST")
-      .form-control
+      .form-control(class=validationErrors.some((e) => e.path === "password") ? "form-control--invalid" : "")
         label(for="password") Password
         input#password(type="password", name="password")
-      .form-control
+      .form-control(class=validationErrors.some((e) => e.path === "confirmPassword") ? "form-control--invalid" : "")
         label(for="confirmPassword") Confirm Password
         input#confirmPassword(type="password", name="confirmPassword")
       input(type="hidden", name="_csrf", value=csrfToken)
