Add input validation to product creation/editing forms

--- a/views/auth/new-password.pug
+++ b/views/auth/new-password.pug
@@ -9,10 +9,10 @@ block content
     form.login-form(action="/save-new-password", method="POST")
       .form-control(class=validationErrors.some((e) => e.path === "password") ? "form-control--invalid" : "")
         label(for="password") Password
-        input#password(type="password", name="password")
+        input#password(type="password", name="password", value=oldInput.password, required)
       .form-control(class=validationErrors.some((e) => e.path === "confirmPassword") ? "form-control--invalid" : "")
         label(for="confirmPassword") Confirm Password
-        input#confirmPassword(type="password", name="confirmPassword")
+        input#confirmPassword(type="password", name="confirmPassword", value=oldInput.confirmPassword, required)
       input(type="hidden", name="_csrf", value=csrfToken)
       input(type="hidden", name="userId", value=userId)
       input(type="hidden", name="resetToken", value=resetToken)
