--- a/views/admin/edit-product.pug
+++ b/views/admin/edit-product.pug
@@ -7,19 +7,21 @@ block styles
 block content
   main
     form.product-form(action="/admin/" + (editing ? "edit" : "add") + "-product", method="POST")
-      .form-control
+      .form-control(class=validationErrors.some((e) => e.path === "title") ? "form-control--invalid" : "")
         label(for="title") Title
-        input#title(type="text", name="title", value=editing ? product.title : "")
-      .form-control
+        input#title(type="text", name="title", value=oldInput.title || (editing ? product.title : ""))
+      .form-control(class=validationErrors.some((e) => e.path === "imageUrl") ? "form-control--invalid" : "")
         label(for="imageUrl") Image URL
-        input#imageUrl(type="text", name="imageUrl", value=editing ? product.imageUrl : "")
-      .form-control
+        input#imageUrl(type="text", name="imageUrl", value=oldInput.imageUrl || (editing ? product.imageUrl : ""))
+      .form-control(class=validationErrors.some((e) => e.path === "price") ? "form-control--invalid" : "")
         label(for="price") Price
-        input#price(type="number", name="price", step="0.01", value=editing ? product.price : "")
-      .form-control
+        input#price(type="number", name="price", step="0.01", value=oldInput.price || (editing ? product.price : ""))
+      .form-control(class=validationErrors.some((e) => e.path === "description") ? "form-control--invalid" : "")
         label(for="description") Description
-        textarea#description(name="description", rows="5") #{ editing ? product.description : "" }
+        textarea#description(name="description", rows="5") #{ oldInput.description || (editing ? product.description : "") }
       if editing
-        input(type="hidden", name="productId", value=product._id)
+        input(type="hidden", name="productId", value=oldInput._id || product._id)
       input(type="hidden", name="_csrf", value=csrfToken)
+      if (errorMessage.length > 0)
+        .user-message.user-message--error #{ errorMessage }
       button.btn(type="submit") #{ editing ? 'Update' : 'Add' } Product
