--- a/views/shop/orders.pug
+++ b/views/shop/orders.pug
@@ -13,6 +13,7 @@ block content
               h1 # #{ order.id }
               ul.orders__products
                 each productItem in order.products
-                  li.orders__products-item #{ productItem.product.title } - $#{ productItem.product.price } x #{ productItem.quantity }
+                  li.orders__products-item #{ productItem.product.title } - $#{ productItem.product.price } x #{ productItem.quantity } :
+                    a(href=`/orders/${order.id}`) Invoice
       else
         p No orders yet
