--- a/views/shop/orders.pug
+++ b/views/shop/orders.pug
@@ -11,9 +11,9 @@ block content
           each order in orders
             li.orders__item
               h1 # #{ order.id }
+              a(href=`/orders/${order.id}`) Invoice
               ul.orders__products
                 each productItem in order.products
-                  li.orders__products-item #{ productItem.product.title } - $#{ productItem.product.price } x #{ productItem.quantity } :
-                    a(href=`/orders/${order.id}`) Invoice
+                  li.orders__products-item #{ productItem.product.title } - $#{ productItem.product.price } x #{ productItem.quantity }
       else
         p No orders yet
