--- a/views/shop/orders.pug
+++ b/views/shop/orders.pug
@@ -10,8 +10,8 @@ block content
         ul.orders
           each order in orders
             li.orders__item
-              h1 # #{ order.id }
-              a(href=`/orders/${order.id}`) Invoice
+              h1 # #{ order.id } -
+                a(href=`/orders/${order.id}`) Invoice
               ul.orders__products
                 each productItem in order.products
                   li.orders__products-item #{ productItem.product.title } - $#{ productItem.product.price } x #{ productItem.quantity }
