Add pagination to shop index and products page to display a limited number of products per page and allow navigation between pages

--- a/views/shop/index.pug
+++ b/views/shop/index.pug
@@ -20,5 +20,6 @@ block content
               include ../layouts/product-details-button.pug
               if (isAuthenticated)
                 include ../layouts/add-to-cart-form.pug
+      include ../layouts/pagination.pug
     else
       h1 No Products
