--- a/public/css/main.css
+++ b/public/css/main.css
@@ -246,6 +246,26 @@ form {
   background-color: lightcoral;
 }
 
+.pagination {
+  margin-top: 40px;
+  text-align: center;
+}
+
+.pagination a {
+  text-decoration: none;
+  color: green;
+  padding: 0.5rem;
+  border: 1px solid green;
+  margin: 0 0.25rem;
+}
+
+.pagination a.active,
+.pagination a:hover,
+.pagination a:active {
+  background: green;
+  color: white;
+}
+
 @media (min-width: 768px) {
   .main-header__nav {
     display: flex;
