--- a/views/shop/products-list.pug
+++ b/views/shop/products-list.pug
@@ -20,5 +20,6 @@ block content
               include ../layouts/product-details-button.pug
               if (isAuthenticated)
                 include ../layouts/add-to-cart-form.pug
+      include ../layouts/pagination.pug
     else
       h1 No Products
