--- a/views/admin/products.pug
+++ b/views/admin/products.pug
@@ -18,9 +18,9 @@ block content
               p.product__description #{ product.description }
             .card__actions
               a.btn(href="/admin/edit-product/" + product._id.toString() + "?edit=true") Edit
-              form(action="/admin/delete-product", method="POST")
-                input(type="hidden", name="productId", value=product._id)
-                input(type="hidden", name="_csrf", value=csrfToken)
-                button.btn(type="submit") Delete
+              input(type="hidden", name="productId", value=product._id)
+              input(type="hidden", name="_csrf", value=csrfToken)
+              button.btn(type="button", onclick="deleteProduct(this)") Delete
     else
       h1 No Products
+  script(src="/js/admin.js")
